Fixed a bug due to which error messages moved too much page elements.

--- a/StoryHub.WebUI/wwwroot/scss/RegisterStyles.scss
+++ b/StoryHub.WebUI/wwwroot/scss/RegisterStyles.scss
@@ -38,8 +38,8 @@ $WindowHoverColor: #96dcdc;
 			text-align: center;
 		}
 
-		.text-danger{
-
+		.class="text-danger"{
+			display: flex;
 		}
 	}
 	.submitButton{
